# playground-Rust

./: .gitignore  README.md  note.md
demo/demo_expression/: Cargo.toml
demo/demo_quick_sort/: Cargo.toml
demo_advanced_feature/: Cargo.toml
demo_advanced_feature/src/: demo_advanced_function.rs  demo_advanced_trait.rs  demo_advanced_type.rs  demo_macro.rs  demo_unsafe.rs  main.rs
demo_bitwise_operator/: Cargo.toml
demo_bitwise_operator/src/: main.rs
demo_bitwise_operators/: Cargo.toml
demo_bitwise_operators/src/: main.rs
demo_cargo_workspace/: Cargo.toml
demo_closure/: Cargo.toml
demo_closure/src/: main.rs
demo_common_collections/: Cargo.toml
demo_common_collections/src/: demo_hash_map.rs  demo_string.rs  demo_vector.rs  main.rs
demo_complex_num/: Cargo.toml
demo_complex_num/src/: main.rs
demo_concurrency/: Cargo.toml
demo_concurrency/src/: demo_message_passing.rs  demo_state_sharing.rs  main.rs
demo_data_type/: Cargo.toml
demo_data_type/src/: demo_tuple.rs
demo_destructuring_assignment/: Cargo.toml
demo_destructuring_assignment/src/: main.rs
demo_error_handling/: Cargo.toml
demo_generic_type/: Cargo.toml
demo_generic_types/: Cargo.toml
demo_lifetime/: Cargo.toml
demo_ownership/: Cargo.toml
demo_pattern_matching/: Cargo.toml
demo_project_management/: Cargo.toml
demo_project_management/src/: lib.rs  main.rs
demo_project_module/: Cargo.toml
hello_world/: Cargo.toml
project-axum-postgres-api/: .env  Cargo.toml  README.md  docker-compose.yml
project-axum-postgres-notes-api/: Cargo.toml  docker-compose.yml
project-axum-todo-api/: Cargo.toml
project-axum-todo-app/: Cargo.toml
project-hello-world/: Cargo.toml
project-minigrep/: Cargo.toml
project-quick-sort/: Cargo.toml
project-rocket-postgres-todo-app/: Cargo.toml  README.md  docker-compose.yml
project-simple-server/: Cargo.toml
project-todo-app/: Cargo.toml  Rocket.toml  docker-compose.yml
project-todo-app/entity/: Cargo.toml
project-todo-app/migration/: Cargo.toml
project-todo-app/migration/src/: lib.rs  m20230912_062515_create_tasks_table.rs  m20230913_033900_create_users_table.rs
project-todo-app/public/: container.css  todo_list.css
project-todo-app/src/: main.rs
project-todo-app/templates/: base.html.tera  todo_list.html.tera
project_hello_world/: Cargo.toml
project_minigrep/: Cargo.toml
project_quick_sort/: Cargo.toml
project_simple_server/: Cargo.toml
(+75 files in other folders)
