[package]
name = "entity"
version = "0.1.0"
edition = "2021"

[lib]
name = "entity"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.rocket]
version = "0.5.0-rc.3"
features = ["json"]

[dependencies.sea-orm]
version = "0.12"
